fix calendar spacing / remove maxWidth on popover

--- a/frontend/src/metabase/components/Popover.css
+++ b/frontend/src/metabase/components/Popover.css
@@ -19,7 +19,6 @@
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
-  max-width: 500px;
 }
 
 .PopoverBody.PopoverBody--tooltip {
